--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,45 @@ body {
   font-family: "Libre Franklin", sans-serif;
 }
 
-footer a {
+.container {
+  margin: 80px auto 32px auto;
+  width: 85%;
+}
+
+header {
+  text-align: center;
+}
+
+h1 {
+  margin-top: 32px;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 32px;
+  color: #969696;
+}
+
+.soon {
+  font-weight: 700;
+  color: #15202a;
+}
+
+header p {
+  margin-top: 15px;
+  margin-bottom: 32px;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 15px;
+  color: #15202a;
+}
+
+.illustration-img {
+  width: 100%;
+  display: block;
+}
+
+.my-footer a {
   text-decoration: none;
   color: tomato;
 }
@@ -18,7 +56,7 @@ footer a {
   font-weight: 600;
 }
 
-footer {
+.my-footer {
   font-size: 13px;
   text-align: center;
   font-weight: 500;
