--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,24 @@ footer {
   margin-top: 48px;
 }
 
+#emailError {
+  display: none;
+  color: #ff5466;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 20px;
+  letter-spacing: 0.15px;
+  margin-left: 20%;
+}
 
+#email.invalid {
+  border-color: #ff5466;
+}
+
+#emailError.visible {
+  display: block;
+}
 
 
 @media screen and (min-width: 992px) {
@@ -158,7 +175,11 @@ footer {
     display: flex;
     justify-content: space-evenly;
     width: 80%;
-    margin: 0 auto 72px auto;
+    margin: 0 auto 8px auto;
+  }
+
+  .illustration {
+    margin-top: 72px;
   }
 
   .illustration-img {
